translation-tool/inputs/source_meta/objects/Self_Care_Case_Page_Display_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to define the fields displayed on the self care in read only or edit mode.</description>
    <fields>
        <fullName>HSvc_FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_Mode__c</fullName>
        <label>Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_RecordTypeName__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_isReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <label>Self Care Case Page Display Settings</label>
</CustomObject>